--- a/experiencia.html
+++ b/experiencia.html
@@ -36,8 +36,9 @@
     <h2>Experiencia</h2>
       <h3>Habilidades e Intereses Personales</h3>
         <video controls poster="img/HabilidadesIntereses.png" width="500px" height="250px">
-            <source src="video/HabilidadesIntereses.MOV" type="video/MOV">
             <source src="video/HabilidadesIntereses.mp4" type="video/mp4">
+            <source src="video/HabilidadesIntereses.wmv" type="video/wmv">
+            <source src="video/HabilidadesIntereses.avi" type="video/avi">
         </video>
       <h3>Hobbies y Actividades</h3>
         <audio src="audio/HobbiesActividades.m4a" controls="none">
